--- a/07-10-2025/Retail-Project/Ecommerce/pom.xml
+++ b/07-10-2025/Retail-Project/Ecommerce/pom.xml
@@ -9,7 +9,7 @@
     <groupId>com.ecommerce</groupId>
     <artifactId>ecommerce-parent</artifactId>
     <version>1.0.0</version>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <name>E-Commerce Parent</name>
     <description>Parent project for e-commerce microservices with async communication</description>
@@ -167,4 +167,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
